@@ -59,7 +59,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>2.20</version>
                         <configuration>
                             <!-- Jacoco prepare-agent builds some command-line params without -->
                             <!-- which jacoco will not instrument. Hence it is important to add -->
@@ -68,6 +68,24 @@
                             <forkCount>1</forkCount>
                             <runOrder>random</runOrder>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.20</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                                <configuration>
+                                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m ${failsafeArgLine}</argLine>
+                                    <forkCount>1</forkCount>
+                                    <runOrder>random</runOrder>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
